@@ -17,6 +17,7 @@ Post-v2.8.0
      delete a specific connection tracking entry.
    - DPDK:
      * Add support for DPDK v17.11
+     * Add support for vHost IOMMU
 
 v2.8.0 - 31 Aug 2017
 --------------------
